k8s-manifests/service.yml
# kind: Service
# apiVersion: v1
# metadata:
#   name: ingress-nginx
#   namespace: ingress-nginx
#   labels:
#     app.kubernetes.io/name: ingress-nginx
#     app.kubernetes.io/part-of: ingress-nginx
# spec:
#   externalTrafficPolicy: Local
#   type: LoadBalancer
#   selector:
#     app.kubernetes.io/name: ingress-nginx
#     app.kubernetes.io/part-of: ingress-nginx
#   ports:
#     - name: http
#       port: 80
#       targetPort: http
#     - name: https
#       port: 443
targetPort: https
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx
  namespace: ingress-nginx
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
